--- a/404.html
+++ b/404.html
@@ -69,7 +69,7 @@
                 margin: 0 auto;
             }
 
-            /* google search */
+            /* google search test */
 
             #goog-fixurl ul {
                 list-style: none;
